Fixed a css layout bug that emerged after code cleanup of styles.css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,7 +26,7 @@ main {
   height: 100vh;
 }
 
-/* navbar style - starts here */
+/* navbar style - start here */
 
 .banner {
   background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.6)),
@@ -72,8 +72,6 @@ a.navbar-item:hover {
 span {
   color: var(--amaranth-red);
 }
-
-
 
 /* Movie search results styling rules */
 
@@ -148,6 +146,32 @@ button {
 	border: 0 !important;
 }
 
+
+
+/* DO NOT DELETE THE COMMENTED OUT CODE BELOW - Breaks the card layout - not sure why, will debug later - Faisal */
+/* .movie-card-image:hover {
+  cursor: pointer;
+   /* look into easein-out-in instead to fix the animation */
+  transform: scale(1.2);
+    /* look into the syntax for scaling animations */
+  /* animation: grow 0.5s ease-out; */
+/* } */
+
+/* .movie-card-image:hover .movie-info {
+  display: block;
+  animation: fadeOut 0.5s ease; */
+/* } */ 
+
+/* end of movie card hover - overlay rules attempt 1 */
+
+/* start of movie card hover - overlay rules attempt 2 */
+/* This class can be replaced using options */
+/* .hover-in{
+	transition: .3s ease-out;
+}
+.hover-out{
+	transition: .3s ease-in;
+} */
 
 .project {
   width: 100%;
@@ -261,8 +285,8 @@ button {
   transform: translateY(40px) scale(0);
   will-change: transform;
   color: white;
-}
 
+}
 
 .project__category a {
   color: rgba(255, 255, 255, 0.8);
@@ -313,3 +337,12 @@ button {
   }
 }
 
+/* @keyframes grow {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.2);
+  } */
+/* } */
